@@ -16,6 +16,8 @@
  */
 package javax.websocket.server;
 
+import java.security.AccessController;
+import java.security.PrivilegedAction;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -149,7 +151,12 @@ public interface ServerEndpointConfig extends EndpointConfig {
             if (defaultImpl == null) {
                 synchronized (defaultImplLock) {
                     if (defaultImpl == null) {
-                        defaultImpl = loadDefault();
+                        if (System.getSecurityManager() == null) {
+                            defaultImpl = loadDefault();
+                        } else {
+                            defaultImpl =
+                                    AccessController.doPrivileged(new PrivilegedLoadDefault());
+                        }
                     }
                 }
             }
@@ -175,14 +182,24 @@ public interface ServerEndpointConfig extends EndpointConfig {
                     Class<Configurator> clazz =
                             (Class<Configurator>) Class.forName(
                                     DEFAULT_IMPL_CLASSNAME);
-                    result = clazz.newInstance();
-                } catch (ClassNotFoundException | InstantiationException |
-                        IllegalAccessException e) {
+                    result = clazz.getConstructor().newInstance();
+                } catch (ReflectiveOperationException | IllegalArgumentException |
+                        SecurityException e) {
                     // No options left. Just return null.
                 }
             }
             return result;
         }
+
+
+        private static class PrivilegedLoadDefault implements PrivilegedAction<Configurator> {
+
+            @Override
+            public Configurator run() {
+                return Configurator.loadDefault();
+            }
+        }
+
 
         public String getNegotiatedSubprotocol(List<String> supported,
                 List<String> requested) {
