@@ -14,7 +14,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.apache.jasper.runtime;
 
 import java.beans.PropertyEditor;
@@ -23,9 +22,6 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.lang.reflect.Method;
-import java.security.AccessController;
-import java.security.PrivilegedActionException;
-import java.security.PrivilegedExceptionAction;
 import java.util.Enumeration;
 
 import javax.servlet.RequestDispatcher;
@@ -33,14 +29,18 @@ import javax.servlet.ServletException;
 import javax.servlet.ServletRequest;
 import javax.servlet.ServletResponse;
 import javax.servlet.http.HttpServletRequest;
+import javax.servlet.jsp.JspException;
 import javax.servlet.jsp.JspWriter;
 import javax.servlet.jsp.PageContext;
 import javax.servlet.jsp.tagext.BodyContent;
+import javax.servlet.jsp.tagext.BodyTag;
+import javax.servlet.jsp.tagext.Tag;
 
-import org.apache.jasper.Constants;
 import org.apache.jasper.JasperException;
 import org.apache.jasper.compiler.Localizer;
-import org.apache.jasper.util.ExceptionUtils;
+import org.apache.juli.logging.Log;
+import org.apache.juli.logging.LogFactory;
+import org.apache.tomcat.InstanceManager;
 
 /**
  * Bunch of util methods that are used by code generated for useBean,
@@ -56,34 +56,20 @@ import org.apache.jasper.util.ExceptionUtils;
  */
 public class JspRuntimeLibrary {
 
-    protected static class PrivilegedIntrospectHelper
-        implements PrivilegedExceptionAction<Void> {
+    public static final boolean GRAAL;
 
-        private final Object bean;
-        private final String prop;
-        private final String value;
-        private final ServletRequest request;
-        private final String param;
-        private final boolean ignoreMethodNF;
-
-        PrivilegedIntrospectHelper(Object bean, String prop,
-                                   String value, ServletRequest request,
-                                   String param, boolean ignoreMethodNF)
-        {
-            this.bean = bean;
-            this.prop = prop;
-            this.value = value;
-            this.request = request;
-            this.param = param;
-            this.ignoreMethodNF = ignoreMethodNF;
+    static {
+        boolean result = false;
+        try {
+            Class<?> nativeImageClazz = Class.forName("org.graalvm.nativeimage.ImageInfo");
+            result = nativeImageClazz.getMethod("inImageCode").invoke(null) != null;
+            // Note: This will also be true for the Graal substrate VM
+        } catch (ClassNotFoundException e) {
+            // Must be Graal
+        } catch (ReflectiveOperationException | IllegalArgumentException e) {
+            // Should never happen
         }
-
-        @Override
-        public Void run() throws JasperException {
-            internalIntrospecthelper(
-                bean,prop,value,request,param,ignoreMethodNF);
-            return null;
-        }
+        GRAAL = result;
     }
 
     /**
@@ -94,6 +80,8 @@ public class JspRuntimeLibrary {
      * This method is called at the beginning of the generated servlet code
      * for a JSP error page, when the "exception" implicit scripting language
      * variable is initialized.
+     * @param request The Servlet request
+     * @return the throwable in the error attribute if any
      */
     public static Throwable getThrowable(ServletRequest request) {
         Throwable error = (Throwable) request.getAttribute(
@@ -239,32 +227,54 @@ public class JspRuntimeLibrary {
             if (propertyEditorClass != null) {
                 return getValueFromBeanInfoPropertyEditor(
                                     t, propertyName, s, propertyEditorClass);
-            } else if ( t.equals(Boolean.class) || t.equals(Boolean.TYPE) ) {
-                if (s.equalsIgnoreCase("on") || s.equalsIgnoreCase("true"))
-                    s = "true";
-                else
-                    s = "false";
+            } else if (t.equals(Boolean.class) || t.equals(Boolean.TYPE)) {
                 return Boolean.valueOf(s);
-            } else if ( t.equals(Byte.class) || t.equals(Byte.TYPE) ) {
-                return Byte.valueOf(s);
+            } else if (t.equals(Byte.class) || t.equals(Byte.TYPE)) {
+                if (s.length() == 0) {
+                    return Byte.valueOf((byte)0);
+                } else {
+                    return Byte.valueOf(s);
+                }
             } else if (t.equals(Character.class) || t.equals(Character.TYPE)) {
-                return s.length() > 0 ? Character.valueOf(s.charAt(0)) : null;
-            } else if ( t.equals(Short.class) || t.equals(Short.TYPE) ) {
-                return Short.valueOf(s);
-            } else if ( t.equals(Integer.class) || t.equals(Integer.TYPE) ) {
-                return Integer.valueOf(s);
-            } else if ( t.equals(Float.class) || t.equals(Float.TYPE) ) {
-                return Float.valueOf(s);
-            } else if ( t.equals(Long.class) || t.equals(Long.TYPE) ) {
-                return Long.valueOf(s);
-            } else if ( t.equals(Double.class) || t.equals(Double.TYPE) ) {
-                return Double.valueOf(s);
+                if (s.length() == 0) {
+                    return Character.valueOf((char) 0);
+                } else {
+                    return Character.valueOf(s.charAt(0));
+                }
+            } else if (t.equals(Double.class) || t.equals(Double.TYPE)) {
+                if (s.length() == 0) {
+                    return Double.valueOf(0);
+                } else {
+                    return Double.valueOf(s);
+                }
+            } else if (t.equals(Integer.class) || t.equals(Integer.TYPE)) {
+                if (s.length() == 0) {
+                    return Integer.valueOf(0);
+                } else {
+                    return Integer.valueOf(s);
+                }
+            } else if (t.equals(Float.class) || t.equals(Float.TYPE)) {
+                if (s.length() == 0) {
+                    return Float.valueOf(0);
+                } else {
+                    return Float.valueOf(s);
+                }
+            } else if (t.equals(Long.class) || t.equals(Long.TYPE)) {
+                if (s.length() == 0) {
+                    return Long.valueOf(0);
+                } else {
+                    return Long.valueOf(s);
+                }
+            } else if (t.equals(Short.class) || t.equals(Short.TYPE)) {
+                if (s.length() == 0) {
+                    return Short.valueOf((short) 0);
+                } else {
+                    return Short.valueOf(s);
+                }
             } else if ( t.equals(String.class) ) {
                 return s;
-            } else if ( t.equals(java.io.File.class) ) {
-                return new java.io.File(s);
             } else if (t.getName().equals("java.lang.Object")) {
-                return new Object[] {s};
+                return new String(s);
             } else {
                 return getValueFromPropertyEditorManager(
                                             t, propertyName, s);
@@ -292,44 +302,29 @@ public class JspRuntimeLibrary {
     public static void introspecthelper(Object bean, String prop,
                                         String value, ServletRequest request,
                                         String param, boolean ignoreMethodNF)
-                                        throws JasperException
-    {
-        if( Constants.IS_SECURITY_ENABLED ) {
-            try {
-                PrivilegedIntrospectHelper dp =
-                    new PrivilegedIntrospectHelper(
-                        bean,prop,value,request,param,ignoreMethodNF);
-                AccessController.doPrivileged(dp);
-            } catch( PrivilegedActionException pe) {
-                Exception e = pe.getException();
-                throw (JasperException)e;
-            }
-        } else {
-            internalIntrospecthelper(
-                bean,prop,value,request,param,ignoreMethodNF);
-        }
-    }
-
-    private static void internalIntrospecthelper(Object bean, String prop,
-                                        String value, ServletRequest request,
-                                        String param, boolean ignoreMethodNF)
-                                        throws JasperException
-    {
+                                        throws JasperException {
         Method method = null;
         Class<?> type = null;
         Class<?> propertyEditorClass = null;
         try {
-            java.beans.BeanInfo info
+            if (GRAAL) {
+                method = getWriteMethod(bean.getClass(), prop);
+                if (method.getParameterTypes().length > 0) {
+                    type = method.getParameterTypes()[0];
+                }
+            } else {
+                java.beans.BeanInfo info
                 = java.beans.Introspector.getBeanInfo(bean.getClass());
-            if ( info != null ) {
-                java.beans.PropertyDescriptor pd[]
-                    = info.getPropertyDescriptors();
-                for (int i = 0 ; i < pd.length ; i++) {
-                    if ( pd[i].getName().equals(prop) ) {
-                        method = pd[i].getWriteMethod();
-                        type   = pd[i].getPropertyType();
-                        propertyEditorClass = pd[i].getPropertyEditorClass();
-                        break;
+                if ( info != null ) {
+                    java.beans.PropertyDescriptor pd[]
+                            = info.getPropertyDescriptors();
+                    for (int i = 0 ; i < pd.length ; i++) {
+                        if ( pd[i].getName().equals(prop) ) {
+                            method = pd[i].getWriteMethod();
+                            type   = pd[i].getPropertyType();
+                            propertyEditorClass = pd[i].getPropertyEditorClass();
+                            break;
+                        }
                     }
                 }
             }
@@ -424,6 +419,13 @@ public class JspRuntimeLibrary {
      * Create a typed array.
      * This is a special case where params are passed through
      * the request and the property is indexed.
+     * @param propertyName The property name
+     * @param bean The bean
+     * @param method The method
+     * @param values Array values
+     * @param t The class
+     * @param propertyEditorClass The editor for the property
+     * @throws JasperException An error occurred
      */
     public static void createTypedArray(String propertyName,
                                         Object bean,
@@ -530,7 +532,7 @@ public class JspRuntimeLibrary {
                 }
                 method.invoke (bean, new Object[] {tmpval});
             }
-        } catch (Exception ex) {
+        } catch (RuntimeException | ReflectiveOperationException ex) {
             Throwable thr = ExceptionUtils.unwrapInvocationTargetException(ex);
             ExceptionUtils.handleThrowable(thr);
             throw new JasperException ("error in invoking method", ex);
@@ -730,89 +732,97 @@ public class JspRuntimeLibrary {
         }
     }
 
+    /**
+     * Reverse of Introspector.decapitalize.
+     * @param name The name
+     * @return the capitalized string
+     */
+    public static String capitalize(String name) {
+        if (name == null || name.length() == 0) {
+            return name;
+        }
+        char chars[] = name.toCharArray();
+        chars[0] = Character.toUpperCase(chars[0]);
+        return new String(chars);
+    }
+
     public static Method getWriteMethod(Class<?> beanClass, String prop)
-    throws JasperException {
-        Method method = null;
+            throws JasperException {
+        Method result = null;
         Class<?> type = null;
-        try {
-            java.beans.BeanInfo info
-                = java.beans.Introspector.getBeanInfo(beanClass);
-            if ( info != null ) {
-                java.beans.PropertyDescriptor pd[]
-                    = info.getPropertyDescriptors();
+        if (GRAAL) {
+            String setter = "set" + capitalize(prop);
+            Method methods[] = beanClass.getMethods();
+            for (Method method : methods) {
+                if (setter.equals(method.getName())) {
+                    return method;
+                }
+            }
+        } else {
+            try {
+                java.beans.BeanInfo info = java.beans.Introspector.getBeanInfo(beanClass);
+                java.beans.PropertyDescriptor pd[] = info.getPropertyDescriptors();
                 for (int i = 0 ; i < pd.length ; i++) {
                     if ( pd[i].getName().equals(prop) ) {
-                        method = pd[i].getWriteMethod();
-                        type   = pd[i].getPropertyType();
+                        result = pd[i].getWriteMethod();
+                        type = pd[i].getPropertyType();
                         break;
                     }
                 }
-            } else {
-                // just in case introspection silently fails.
-                throw new JasperException(
-                    Localizer.getMessage("jsp.error.beans.nobeaninfo",
-                                         beanClass.getName()));
+            } catch (Exception ex) {
+                throw new JasperException (ex);
             }
-        } catch (Exception ex) {
-            throw new JasperException (ex);
         }
-        if (method == null) {
+        if (result == null) {
             if (type == null) {
-                throw new JasperException(
-                        Localizer.getMessage("jsp.error.beans.noproperty",
-                                             prop,
-                                             beanClass.getName()));
+                throw new JasperException(Localizer.getMessage(
+                        "jsp.error.beans.noproperty", prop, beanClass.getName()));
             } else {
-                throw new JasperException(
-                    Localizer.getMessage("jsp.error.beans.nomethod.setproperty",
-                                         prop,
-                                         type.getName(),
-                                         beanClass.getName()));
+                throw new JasperException(Localizer.getMessage(
+                        "jsp.error.beans.nomethod.setproperty",
+                        prop, type.getName(), beanClass.getName()));
             }
         }
-        return method;
+        return result;
     }
 
     public static Method getReadMethod(Class<?> beanClass, String prop)
             throws JasperException {
-
-        Method method = null;
+        Method result = null;
         Class<?> type = null;
-        try {
-            java.beans.BeanInfo info
-                = java.beans.Introspector.getBeanInfo(beanClass);
-            if ( info != null ) {
-                java.beans.PropertyDescriptor pd[]
-                    = info.getPropertyDescriptors();
+        if (GRAAL) {
+            String setter = "get" + capitalize(prop);
+            Method methods[] = beanClass.getMethods();
+            for (Method method : methods) {
+                if (setter.equals(method.getName())) {
+                    return method;
+                }
+            }
+        } else {
+            try {
+                java.beans.BeanInfo info = java.beans.Introspector.getBeanInfo(beanClass);
+                java.beans.PropertyDescriptor pd[] = info.getPropertyDescriptors();
                 for (int i = 0 ; i < pd.length ; i++) {
-                    if ( pd[i].getName().equals(prop) ) {
-                        method = pd[i].getReadMethod();
-                        type   = pd[i].getPropertyType();
+                    if (pd[i].getName().equals(prop)) {
+                        result = pd[i].getReadMethod();
+                        type = pd[i].getPropertyType();
                         break;
                     }
                 }
-            } else {
-                // just in case introspection silently fails.
-                throw new JasperException(
-                    Localizer.getMessage("jsp.error.beans.nobeaninfo",
-                                         beanClass.getName()));
+            } catch (Exception ex) {
+                throw new JasperException (ex);
             }
-        } catch (Exception ex) {
-            throw new JasperException (ex);
         }
-        if (method == null) {
+        if (result == null) {
             if (type == null) {
-                throw new JasperException(
-                    Localizer.getMessage("jsp.error.beans.noproperty", prop,
-                                         beanClass.getName()));
+                throw new JasperException(Localizer.getMessage(
+                        "jsp.error.beans.noproperty", prop, beanClass.getName()));
             } else {
-                throw new JasperException(
-                    Localizer.getMessage("jsp.error.beans.nomethod", prop,
-                                         beanClass.getName()));
+                throw new JasperException(Localizer.getMessage(
+                        "jsp.error.beans.nomethod", prop, beanClass.getName()));
             }
         }
-
-        return method;
+        return result;
     }
 
     //*********************************************************************
@@ -824,15 +834,18 @@ public class JspRuntimeLibrary {
         throws JasperException
     {
         try {
-            PropertyEditor pe =
-                (PropertyEditor)propertyEditorClass.newInstance();
+            PropertyEditor pe = (PropertyEditor)propertyEditorClass.getConstructor().newInstance();
             pe.setAsText(attrValue);
             return pe.getValue();
         } catch (Exception ex) {
-            throw new JasperException(
-                Localizer.getMessage("jsp.error.beans.property.conversion",
-                                     attrValue, attrClass.getName(), attrName,
-                                     ex.getMessage()));
+            if (attrValue.length() == 0) {
+                return null;
+            } else {
+                throw new JasperException(
+                    Localizer.getMessage("jsp.error.beans.property.conversion",
+                                         attrValue, attrClass.getName(), attrName,
+                                         ex.getMessage()));
+            }
         }
     }
 
@@ -846,15 +859,21 @@ public class JspRuntimeLibrary {
             if (propEditor != null) {
                 propEditor.setAsText(attrValue);
                 return propEditor.getValue();
+            } else if (attrValue.length() == 0) {
+                return null;
             } else {
                 throw new IllegalArgumentException(
                     Localizer.getMessage("jsp.error.beans.propertyeditor.notregistered"));
             }
         } catch (IllegalArgumentException ex) {
-            throw new JasperException(
-                Localizer.getMessage("jsp.error.beans.property.conversion",
-                                     attrValue, attrClass.getName(), attrName,
-                                     ex.getMessage()));
+            if (attrValue.length() == 0) {
+                return null;
+            } else {
+                throw new JasperException(
+                    Localizer.getMessage("jsp.error.beans.property.conversion",
+                                         attrValue, attrClass.getName(), attrName,
+                                         ex.getMessage()));
+            }
         }
     }
 
@@ -870,14 +889,15 @@ public class JspRuntimeLibrary {
      *
      * @param request The servlet request we are processing
      * @param relativePath The possibly relative resource path
+     * @return an absolute path
      */
     public static String getContextRelativePath(ServletRequest request,
                                                 String relativePath) {
 
         if (relativePath.startsWith("/"))
-            return (relativePath);
+            return relativePath;
         if (!(request instanceof HttpServletRequest))
-            return (relativePath);
+            return relativePath;
         HttpServletRequest hrequest = (HttpServletRequest) request;
         String uri = (String) request.getAttribute(
                 RequestDispatcher.INCLUDE_SERVLET_PATH);
@@ -1011,4 +1031,40 @@ public class JspRuntimeLibrary {
         return false;
     }
 
+
+    public static JspWriter startBufferedBody(PageContext pageContext, BodyTag tag)
+            throws JspException {
+        BodyContent out = pageContext.pushBody();
+        tag.setBodyContent(out);
+        tag.doInitBody();
+        return out;
+    }
+
+
+    public static void releaseTag(Tag tag, InstanceManager instanceManager, boolean reused) {
+        // Caller ensures pool is non-null if reuse is true
+        if (!reused) {
+            releaseTag(tag, instanceManager);
+        }
+    }
+
+
+    protected static void releaseTag(Tag tag, InstanceManager instanceManager) {
+        try {
+            tag.release();
+        } catch (Throwable t) {
+            ExceptionUtils.handleThrowable(t);
+            Log log = LogFactory.getLog(JspRuntimeLibrary.class);
+            log.warn(Localizer.getMessage("jsp.warning.tagRelease", tag.getClass().getName()), t);
+        }
+        try {
+            instanceManager.destroyInstance(tag);
+        } catch (Exception e) {
+            Throwable t = ExceptionUtils.unwrapInvocationTargetException(e);
+            ExceptionUtils.handleThrowable(t);
+            Log log = LogFactory.getLog(JspRuntimeLibrary.class);
+            log.warn(Localizer.getMessage("jsp.warning.tagPreDestroy", tag.getClass().getName()), t);
+        }
+
+    }
 }
