@@ -50,12 +50,12 @@ import org.apache.tomcat.util.res.StringManager;
 
 public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
-    private static final StringManager sm =
+    protected static final StringManager sm =
             StringManager.getManager(WsRemoteEndpointImplBase.class);
 
     protected static final SendResult SENDRESULT_OK = new SendResult();
 
-    private final Log log = LogFactory.getLog(WsRemoteEndpointImplBase.class);
+    private final Log log = LogFactory.getLog(WsRemoteEndpointImplBase.class); // must not be static
 
     private final StateMachine stateMachine = new StateMachine();
 
@@ -299,7 +299,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
                 throw new SocketTimeoutException(msg);
             }
         } catch (InterruptedException e) {
-            String msg = sm.getString("wsRemoteEndpoint.sendInterupt");
+            String msg = sm.getString("wsRemoteEndpoint.sendInterrupt");
             wsSession.doClose(new CloseReason(CloseCodes.GOING_AWAY, msg),
                     new CloseReason(CloseCodes.CLOSED_ABNORMALLY, msg));
             throw new IOException(msg, e);
@@ -338,7 +338,12 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
                 intermediateMessageHandler,
                 new EndMessageHandler(this, handler), -1));
 
-        messageParts = transformation.sendMessagePart(messageParts);
+        try {
+            messageParts = transformation.sendMessagePart(messageParts);
+        } catch (IOException ioe) {
+            handler.onResult(new SendResult(ioe));
+            return;
+        }
 
         // Some extensions/transformations may buffer messages so it is possible
         // that no message parts will be returned. If this is the case the
@@ -676,9 +681,9 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
                 endpointConfig.getEncoders()) {
             Encoder instance;
             try {
-                instance = encoderClazz.newInstance();
+                instance = encoderClazz.getConstructor().newInstance();
                 instance.init(endpointConfig);
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (ReflectiveOperationException e) {
                 throw new DeploymentException(
                         sm.getString("wsRemoteEndpoint.invalidEncoder",
                                 encoderClazz.getName()), e);
@@ -704,11 +709,14 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         for (EncoderEntry entry : encoderEntries) {
             entry.getEncoder().destroy();
         }
+        // The transformation handles both input and output. It only needs to be
+        // closed once so it is closed here on the output side.
+        transformation.close();
         doClose();
     }
 
 
-    protected abstract void doWrite(SendHandler handler, long blockingWrieTimeoutExpiry,
+    protected abstract void doWrite(SendHandler handler, long blockingWriteTimeoutExpiry,
             ByteBuffer... data);
     protected abstract boolean isMasked();
     protected abstract void doClose();
@@ -741,12 +749,12 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         }
 
         // Next write the mask && length length
-        if (payload.limit() < 126) {
-            headerBuffer.put((byte) (payload.limit() | b));
-        } else if (payload.limit() < 65536) {
+        if (payload.remaining() < 126) {
+            headerBuffer.put((byte) (payload.remaining() | b));
+        } else if (payload.remaining() < 65536) {
             headerBuffer.put((byte) (126 | b));
-            headerBuffer.put((byte) (payload.limit() >>> 8));
-            headerBuffer.put((byte) (payload.limit() & 0xFF));
+            headerBuffer.put((byte) (payload.remaining() >>> 8));
+            headerBuffer.put((byte) (payload.remaining() & 0xFF));
         } else {
             // Will never be more than 2^31-1
             headerBuffer.put((byte) (127 | b));
@@ -754,10 +762,10 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
             headerBuffer.put((byte) 0);
             headerBuffer.put((byte) 0);
             headerBuffer.put((byte) 0);
-            headerBuffer.put((byte) (payload.limit() >>> 24));
-            headerBuffer.put((byte) (payload.limit() >>> 16));
-            headerBuffer.put((byte) (payload.limit() >>> 8));
-            headerBuffer.put((byte) (payload.limit() & 0xFF));
+            headerBuffer.put((byte) (payload.remaining() >>> 24));
+            headerBuffer.put((byte) (payload.remaining() >>> 16));
+            headerBuffer.put((byte) (payload.remaining() >>> 8));
+            headerBuffer.put((byte) (payload.remaining() & 0xFF));
         }
         if (masked) {
             headerBuffer.put(mask[0]);
@@ -833,7 +841,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         private final ByteBuffer outputBuffer;
         private final boolean flushRequired;
         private final WsRemoteEndpointImplBase endpoint;
-        private int maskIndex = 0;
+        private volatile int maskIndex = 0;
 
         public OutputBufferSendHandler(SendHandler completion,
                 long blockingWriteTimeoutExpiry,
@@ -980,15 +988,17 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
                 throw new IllegalStateException(
                         sm.getString("wsRemoteEndpoint.closedOutputStream"));
             }
-            if (len == 0) {
-                return;
-            }
             if ((off < 0) || (off > b.length) || (len < 0) ||
                 ((off + len) > b.length) || ((off + len) < 0)) {
                 throw new IndexOutOfBoundsException();
             }
 
             used = true;
+
+            if (len == 0) {
+                return;
+            }
+
             if (buffer.remaining() == 0) {
                 flush();
             }
@@ -1013,7 +1023,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
             // Optimisation. If there is no data to flush then do not send an
             // empty message.
-            if (!Constants.STREAMS_DROP_EMPTY_MESSAGES || buffer.position() > 0) {
+            if (buffer.position() > 0) {
                 doWrite(false);
             }
         }
@@ -1031,7 +1041,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         }
 
         private void doWrite(boolean last) throws IOException {
-            if (!Constants.STREAMS_DROP_EMPTY_MESSAGES || used) {
+            if (used) {
                 buffer.flip();
                 endpoint.sendMessageBlock(Constants.OPCODE_BINARY, buffer, last);
             }
@@ -1059,15 +1069,17 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
                 throw new IllegalStateException(
                         sm.getString("wsRemoteEndpoint.closedWriter"));
             }
-            if (len == 0) {
-                return;
-            }
             if ((off < 0) || (off > cbuf.length) || (len < 0) ||
                     ((off + len) > cbuf.length) || ((off + len) < 0)) {
                 throw new IndexOutOfBoundsException();
             }
 
             used = true;
+
+            if (len == 0) {
+                return;
+            }
+
             if (buffer.remaining() == 0) {
                 flush();
             }
@@ -1090,7 +1102,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
                         sm.getString("wsRemoteEndpoint.closedWriter"));
             }
 
-            if (!Constants.STREAMS_DROP_EMPTY_MESSAGES || buffer.position() > 0) {
+            if (buffer.position() > 0) {
                 doWrite(false);
             }
         }
@@ -1108,7 +1120,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
         }
 
         private void doWrite(boolean last) throws IOException {
-            if (!Constants.STREAMS_DROP_EMPTY_MESSAGES || used) {
+            if (used) {
                 buffer.flip();
                 endpoint.sendMessageBlock(buffer, last);
                 buffer.clear();
@@ -1139,7 +1151,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
     }
 
 
-    private static enum State {
+    private enum State {
         OPEN,
         STREAM_WRITING,
         WRITER_WRITING,
@@ -1246,7 +1258,7 @@ public abstract class WsRemoteEndpointImplBase implements RemoteEndpoint {
 
     private static class BlockingSendHandler implements SendHandler {
 
-        private SendResult sendResult = null;
+        private volatile SendResult sendResult = null;
 
         @Override
         public void onResult(SendResult result) {
