@@ -49,7 +49,7 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        Class<?> result = resolver.getType(context, base, new Integer(0));
+        Class<?> result = resolver.getType(context, base, Integer.valueOf(0));
 
         Assert.assertEquals(base.getClass().getComponentType(), result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -65,7 +65,7 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        resolver.getType(context, base, new Integer(1));
+        resolver.getType(context, base, Integer.valueOf(1));
     }
 
     /**
@@ -82,6 +82,21 @@ public class TestArrayELResolver {
 
         Assert.assertEquals(base.getClass().getComponentType(), result);
         Assert.assertTrue(context.isPropertyResolved());
+    }
+
+    /**
+     * Tests that a null result is returned when the base is null.
+     */
+    @Test
+    public void testGetType06() {
+        ArrayELResolver resolver = new ArrayELResolver();
+        ELContext context = new StandardELContext(
+                ELManager.getExpressionFactory());
+
+        Class<?> result = resolver.getType(context, null, "index");
+
+        Assert.assertNull(result);
+        Assert.assertFalse(context.isPropertyResolved());
     }
 
     /**
@@ -112,17 +127,89 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        Object result = resolver.getValue(context, base, new Integer(0));
+        Object result = resolver.getValue(context, base, Integer.valueOf(0));
 
         Assert.assertEquals("element", result);
         Assert.assertTrue(context.isPropertyResolved());
+    }
+
+    @Test
+    public void testGetValueCoercion01() {
+        ArrayELResolver resolver = new ArrayELResolver();
+        ELContext context = new StandardELContext(
+                ELManager.getExpressionFactory());
+
+        String[] base = new String[] { "element" };
+        Object result = resolver.getValue(context, base, Character.valueOf((char) 0));
+
+        Assert.assertEquals("element", result);
+        Assert.assertTrue(context.isPropertyResolved());
+    }
+
+    @Test
+    public void testGetValueCoercion02a() {
+        ArrayELResolver resolver = new ArrayELResolver();
+        ELContext context = new StandardELContext(
+                ELManager.getExpressionFactory());
+
+        String[] base = new String[] { "element" };
+        Object result = resolver.getValue(context, base, Boolean.FALSE);
+
+        Assert.assertEquals("element", result);
+        Assert.assertTrue(context.isPropertyResolved());
+    }
+
+    @Test
+    public void testGetValueCoercion02b() {
+        ArrayELResolver resolver = new ArrayELResolver();
+        ELContext context = new StandardELContext(
+                ELManager.getExpressionFactory());
+
+        String[] base = new String[] { "element" };
+        Object result = resolver.getValue(context, base, Boolean.TRUE);
+
+        Assert.assertNull(result);
+        Assert.assertTrue(context.isPropertyResolved());
+    }
+
+    @Test
+    public void testGetValueCoercion03() {
+        ArrayELResolver resolver = new ArrayELResolver();
+        ELContext context = new StandardELContext(
+                ELManager.getExpressionFactory());
+
+        String[] base = new String[] { "element" };
+        Object result = resolver.getValue(context, base, "0");
+
+        Assert.assertEquals("element", result);
+        Assert.assertTrue(context.isPropertyResolved());
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void testGetValueCoercion04() {
+        ArrayELResolver resolver = new ArrayELResolver();
+        ELContext context = new StandardELContext(
+                ELManager.getExpressionFactory());
+
+        String[] base = new String[] { "element" };
+        resolver.getValue(context, base, new Object());
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void testGetValueCoercion05() {
+        ArrayELResolver resolver = new ArrayELResolver();
+        ELContext context = new StandardELContext(
+                ELManager.getExpressionFactory());
+
+        String[] base = new String[] { "element" };
+        resolver.getValue(context, base, null);
     }
 
     /**
      * Tests a coercion cannot be performed as the key is not integer.
      */
     @Test(expected = IllegalArgumentException.class)
-    public void testGetValue04() {
+    public void testGetValueCoercion06() {
         ArrayELResolver resolver = new ArrayELResolver();
         ELContext context = new StandardELContext(
                 ELManager.getExpressionFactory());
@@ -132,7 +219,7 @@ public class TestArrayELResolver {
     }
 
     /**
-     * Tests that the key is out of bounds and null will be returned.
+     * Tests that if the key is out of bounds null will be returned.
      */
     @Test
     public void testGetValue05() {
@@ -141,12 +228,12 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        Object result = resolver.getValue(context, base, new Integer(1));
+        Object result = resolver.getValue(context, base, Integer.valueOf(1));
 
         Assert.assertNull(result);
         Assert.assertTrue(context.isPropertyResolved());
 
-        result = resolver.getValue(context, base, new Integer(-1));
+        result = resolver.getValue(context, base, Integer.valueOf(-1));
 
         Assert.assertNull(result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -192,16 +279,16 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        resolver.setValue(context, base, new Integer(0), "new-element");
+        resolver.setValue(context, base, Integer.valueOf(0), "new-element");
 
         Assert.assertEquals("new-element",
-                resolver.getValue(context, base, new Integer(0)));
+                resolver.getValue(context, base, Integer.valueOf(0)));
         Assert.assertTrue(context.isPropertyResolved());
 
-        resolver.setValue(context, base, new Integer(0), null);
+        resolver.setValue(context, base, Integer.valueOf(0), null);
 
         Assert.assertEquals(null,
-                resolver.getValue(context, base, new Integer(0)));
+                resolver.getValue(context, base, Integer.valueOf(0)));
         Assert.assertTrue(context.isPropertyResolved());
     }
 
@@ -228,7 +315,7 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        resolver.setValue(context, base, new Integer(1), "new-element");
+        resolver.setValue(context, base, Integer.valueOf(1), "new-element");
     }
 
     /**
@@ -242,7 +329,7 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        resolver.setValue(context, base, new Integer(0), new Integer(1));
+        resolver.setValue(context, base, Integer.valueOf(0), Integer.valueOf(1));
     }
 
     /**
@@ -256,9 +343,22 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         int[] base = new int[] { 1, 2, 3 };
-        resolver.setValue(context, base, new Integer(1), Integer.valueOf(4));
+        resolver.setValue(context, base, Integer.valueOf(1), Integer.valueOf(4));
 
         Assert.assertEquals(Integer.valueOf(base[1]), Integer.valueOf(4));
+    }
+
+    /*
+     * Null base should be a NO-OP rather than an exception
+     */
+    @Test
+    public void testSetValue09() {
+        ArrayELResolver resolver = new ArrayELResolver();
+        ELContext context = new StandardELContext(
+                ELManager.getExpressionFactory());
+
+        resolver.setValue(context, null, Integer.valueOf(1), Integer.valueOf(4));
+        Assert.assertFalse(context.isPropertyResolved());
     }
 
     /**
@@ -304,14 +404,14 @@ public class TestArrayELResolver {
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        boolean result = resolver.isReadOnly(context, base, new Integer(0));
+        boolean result = resolver.isReadOnly(context, base, Integer.valueOf(0));
 
         Assert.assertFalse(result);
         Assert.assertTrue(context.isPropertyResolved());
 
         resolver = new ArrayELResolver(true);
 
-        result = resolver.isReadOnly(context, base, new Integer(0));
+        result = resolver.isReadOnly(context, base, Integer.valueOf(0));
 
         Assert.assertTrue(result);
         Assert.assertTrue(context.isPropertyResolved());
@@ -322,19 +422,29 @@ public class TestArrayELResolver {
      */
     @Test(expected = PropertyNotFoundException.class)
     public void testIsReadOnly04() {
+        doTestIsReadOutOfBounds(1);
+    }
+
+    @Test(expected = PropertyNotFoundException.class)
+    public void testIsReadOnly05() {
+        doTestIsReadOutOfBounds(-1);
+    }
+
+    private void doTestIsReadOutOfBounds(int index) {
         ArrayELResolver resolver = new ArrayELResolver();
         ELContext context = new StandardELContext(
                 ELManager.getExpressionFactory());
 
         String[] base = new String[] { "element" };
-        resolver.isReadOnly(context, base, new Integer(1));
+        resolver.isReadOnly(context, base, Integer.valueOf(index));
+        Assert.assertTrue(context.isPropertyResolved());
     }
 
     /**
      * Tests that a result is returned even when a coercion cannot be performed.
      */
     @Test
-    public void testIsReadOnly05() {
+    public void testIsReadOnly06() {
         ArrayELResolver resolver = new ArrayELResolver();
         ELContext context = new StandardELContext(
                 ELManager.getExpressionFactory());
@@ -351,6 +461,25 @@ public class TestArrayELResolver {
 
         Assert.assertTrue(result);
         Assert.assertTrue(context.isPropertyResolved());
+    }
+
+    @Test
+    public void testIsReadOnly07() {
+        ArrayELResolver resolver = new ArrayELResolver();
+        ELContext context = new StandardELContext(
+                ELManager.getExpressionFactory());
+
+        boolean result = resolver.isReadOnly(context, null, null);
+
+        Assert.assertFalse(result);
+        Assert.assertFalse(context.isPropertyResolved());
+
+        resolver = new ArrayELResolver(true);
+
+        result = resolver.isReadOnly(context, null, null);
+
+        Assert.assertTrue(result);
+        Assert.assertFalse(context.isPropertyResolved());
     }
 
     private void doNegativeTest(Object base, Object trigger,
@@ -385,8 +514,41 @@ public class TestArrayELResolver {
         Assert.assertFalse(context.isPropertyResolved());
     }
 
-    private static enum MethodUnderTest {
+    private enum MethodUnderTest {
         GET_VALUE, SET_VALUE, GET_TYPE
     }
 
+
+    @Test
+    public void testGetFeatureDescriptiors() {
+        // Should always return null
+        ArrayELResolver resolver = new ArrayELResolver();
+        Assert.assertNull(resolver.getFeatureDescriptors(null, null));
+    }
+
+
+    @Test
+    public void testGetCommonPropertyType01() {
+        // null base, null response
+        ArrayELResolver resolver = new ArrayELResolver();
+        Assert.assertNull(resolver.getCommonPropertyType(null, null));
+    }
+
+
+    @Test
+    public void testGetCommonPropertyType02() {
+        // non-array base, null response
+        ArrayELResolver resolver = new ArrayELResolver();
+        Assert.assertNull(resolver.getCommonPropertyType(null, new Object()));
+    }
+
+
+    @Test
+    public void testGetCommonPropertyType03() {
+        // array base, Integer response
+        ArrayELResolver resolver = new ArrayELResolver();
+        Class<?> clazz = resolver.getCommonPropertyType(null, new Object[]{});
+        Assert.assertNotNull(clazz);
+        Assert.assertEquals(clazz, Integer.class);
+    }
 }
